Move sutil package up one layer (now com.weinsim.sutil). Change Math.min(Math.max(...)) into Math.clamp(...). Fix MainLoop.testImports() (broke when turning this into maven project).