@@ -63,7 +63,7 @@ public final class PencilTool extends ImageTool {
     }
 
     public void setSize(int size) {
-        this.size = Math.min(Math.max(size, MIN_SIZE), MAX_SIZE);
+        this.size = Math.clamp(size, MIN_SIZE, MAX_SIZE);
     }
 
     public boolean isApplyTransparency() {
