@@ -3,8 +3,8 @@ package com.weinsim.slpaint.main.tools;
 import static org.lwjgl.glfw.GLFW.*;
 
 import com.weinsim.slpaint.renderengine.font.TextFont;
-import com.weinsim.slpaint.sutil.math.SVector;
-import com.weinsim.slpaint.sutil.ui.UI;
+import com.weinsim.sutil.math.SVector;
+import com.weinsim.sutil.ui.UI;
 
 public final class TextTool extends DragTool {
 
@@ -110,7 +110,7 @@ public final class TextTool extends DragTool {
     }
 
     public void setSize(int size) {
-        this.size = Math.min(Math.max(MIN_TEXT_SIZE, size), MAX_TEXT_SIZE);
+        this.size = Math.clamp(size, MIN_TEXT_SIZE, MAX_TEXT_SIZE);
     }
 
     // public String getFont() {
