@@ -20,14 +20,14 @@ import com.weinsim.slpaint.main.apps.App;
 import com.weinsim.slpaint.main.apps.MainApp;
 import com.weinsim.slpaint.settings.BooleanSetting;
 import com.weinsim.slpaint.settings.ColorSetting;
+import com.weinsim.sutil.SUtil;
+import com.weinsim.sutil.ui.UI;
+import com.weinsim.sutil.ui.UIColors;
+import com.weinsim.sutil.ui.UISizes;
+import com.weinsim.sutil.ui.UIStyle;
+import com.weinsim.sutil.ui.elements.UIElement;
 import com.weinsim.slpaint.renderengine.Cleanable;
 import com.weinsim.slpaint.renderengine.font.TextFont;
-import com.weinsim.slpaint.sutil.SUtil;
-import com.weinsim.slpaint.sutil.ui.UI;
-import com.weinsim.slpaint.sutil.ui.UIColors;
-import com.weinsim.slpaint.sutil.ui.UISizes;
-import com.weinsim.slpaint.sutil.ui.UIStyle;
-import com.weinsim.slpaint.sutil.ui.elements.UIElement;
 
 public abstract class AppUI<T extends App> extends UI implements Cleanable {
 
@@ -86,7 +86,7 @@ public abstract class AppUI<T extends App> extends UI implements Cleanable {
     @Override
     public double textWidthImpl(String text, double textSize, String fontName, int len) {
         TextFont font = TextFont.getFont(fontName);
-        len = Math.min(Math.max(0, len), text.length());
+        len = Math.clamp(len, 0, text.length());
         return font.textWidth(text, len) * textSize / font.size;
     }
 
